--- a/sytle/style.css
+++ b/sytle/style.css
@@ -1,15 +1,16 @@
 html, body {
+    max-width: 50%;
     height: 100%;
     margin: 0;
     padding: 0;
   }
   
   .container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
     background-color: #f2f2f2;
   }
   
