--- a/sytle/style.css
+++ b/sytle/style.css
@@ -1,5 +1,4 @@
-html, body {
-    max-width: 50%;
+html, body{
     height: 100%;
     margin: 0;
     padding: 0;
@@ -13,16 +12,22 @@ html, body {
     align-items: center;
     background-color: #f2f2f2;
   }
+  .div2{
+    height: 200px; width: 500px;
+    background-color: black;
+  }
   
   .header {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    color: white;
   }
   
   .content {
     font-size: 18px;
     margin-bottom: 20px;
+    color: white;
   }
   
   .button {
