--- a/sytle/style.css
+++ b/sytle/style.css
@@ -13,8 +13,9 @@ html, body{
     background-color: #f2f2f2;
   }
   .div2{
-    height: 200px; width: 500px;
+    height: 200px; width: 700px;
     background-color: black;
+    border: 1px blue solid;
   }
   
   .header {
